# OpenPS2000

./: .gitignore  README.md  resume.txt
.github/: copilot-instructions.md
.github/workflows/: build.yml
android/: AlarmNotifier.cpp  AlarmNotifier.h  AndroidSerialTransport.cpp  AndroidSerialTransport.h  CMakeLists.txt  main.cpp
android/android_package/: AndroidManifest.xml
android/android_package/res/values/: styles.xml
android/android_package/res/xml/: usb_device_filter.xml
android/java/org/openps2000/: UsbSerial.java
android/qml/: ControlTab.qml  LiveChart.qml  Main.qml  MonitorTab.qml  SettingsTab.qml
app/: AbstractTransport.h  BatteryProfile.cpp  BatteryProfile.h  CMakeLists.txt  ChargerEngine.cpp  ChargerEngine.h  DataRecord.h  DeviceBackend.cpp  DeviceBackend.h  MqttClient.cpp  MqttClient.h  OdsWriter.cpp  OdsWriter.h  PS2000Protocol.cpp  PS2000Protocol.h  PulseEngine.cpp  PulseEngine.h  RemoteBackend.cpp  RemoteBackend.h  RemoteServer.cpp  RemoteServer.h  SequenceEngine.cpp  SequenceEngine.h  SequenceProfile.cpp  SequenceProfile.h  SerialTransport.cpp  SerialTransport.h  TrayManager.cpp  TrayManager.h  XlsxWriter.cpp  XlsxWriter.h  ZipReader.cpp  ZipReader.h  ZipWriter.cpp  ZipWriter.h  main.cpp  openps2000.desktop
app/i18n/: openps2000_cs.ts  openps2000_de.ts  openps2000_es.ts  openps2000_pl.ts  openps2000_zh_CN.ts
app/qml/: ChargerTab.qml  ChargingChart.qml  LiveChart.qml  Main.qml  PulseChart.qml  PulseTab.qml  RemoteSettingsPanel.qml  SequenceChart.qml  SequenceEditorDialog.qml  SequenceTab.qml
doc/: architecture.md
